# autodir

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TAGS  aclocal.m4  bootstrap  configure  configure.ac  configure.in
doc/: Makefile.am  Makefile.in
doc/docbook/: Autodir-HOWTO.html  Autodir-HOWTO.xml  Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  autodir.pod
packaging/: README.md
packaging/init/: autodir.init
packaging/systemd/: autodir-group.service
scripts/: bootstrap
src/: Makefile.am  Makefile.in  TAGS  autodir.c  autodir.h  backup.c  backup.h  backup_argv.c  backup_argv.h  backup_child.c  backup_child.h  backup_fork.c  backup_fork.h  backup_pid.c  backup_pid.h  backup_queue.c  backup_queue.h  config.h.in  dropcap.c  dropcap.h  expire.c  expire.h  lockfile.c  lockfile.h  miscfuncs.c  miscfuncs.h  module.c  module.h  mpacket.c  mpacket.h  msg.c  msg.h  multipath.c  multipath.h  options.c  options.h  thread.c  thread.h  thread_cache.c  thread_cache.h  (+4 more)
src/modules/: Makefile.am  Makefile.in  TAGS  autogroup.c  autohome.c  automisc.c
