pkglib_LTLIBRARIES =	autohome.la autogroup.la automisc.la

autohome_la_SOURCES =	autohome.c
autohome_la_LDFLAGS =	-module -version-info 1001:2 -shrext .so

autogroup_la_SOURCES =	autogroup.c
autogroup_la_LDFLAGS =	-module -version-info 1001:2 -shrext .so

automisc_la_SOURCES =	automisc.c
automisc_la_LDFLAGS =	-module -version-info 1001:2 -shrext .so
